* Add shared measurement log implementation for weight and temp logging * Store weight calibration data to EEPROM * Add weight chart and clean up homepage * Add Tare button * Refactor JS code, add API client
