# simulator/api.py
@@ -16,6 +16,8 @@ CORS(app.app)
 local_t0 = time.time()
 
 temp_history = []
+weight_history = []
+weight = 100.0
 
 # Generated by https://web-push-codelab.glitch.me/
 # Also see: https://raturitechmedia.medium.com/webpush-notification-using-python-and-flask-ccb3f083ac76
@@ -89,10 +91,6 @@ def temperature_get():
     return temp_history[-1] or 50.0
 
 
-def weight_get():
-    return random.randint(0, 100) * 0.1
-
-
 def temperature_history_get(minutes=None):
     t = device_time()
     start_time = 0
@@ -103,6 +101,32 @@ def temperature_history_get(minutes=None):
     return {
         'ts': device_time(),
         'values': [t for t in temp_history if t['ts'] >= start_time]
+    }
+
+
+def weight_get():
+    return weight + random.random() * 10.0
+
+
+def weight_set():
+    global weight
+    weight = float(connexion.request.form['value'])
+
+
+def weight_calibrate(value):
+    pass
+
+
+def weight_history_get(minutes=None):
+    t = device_time()
+    start_time = 0
+    if minutes:
+        minutes = int(minutes)
+        start_time = t - minutes * 60000
+
+    return {
+        'ts': device_time(),
+        'values': [t for t in weight_history if t['ts'] >= start_time]
     }
 
 
@@ -123,7 +147,7 @@ def push_message(body):
     return 'Ok'
 
 
-@app.route('/events', methods=['GET'])
+@app.route('/api/events', methods=['GET'])
 def listen():
     # SSE stream
     def stream():
@@ -159,8 +183,9 @@ def send_weight_event():
 
     data = {
         'ts': device_time(),
-        'value': random.randint(0, 100) * 0.1
+        'value': weight_get()
     }
+    weight_history.append(data)
 
     msg = f"event: weight\ndata: {json.dumps(data)}\n\n"
     announcer.announce(msg)
